# TAPL

./: .gitignore  LOG.md  Makefile  README.md  TAPL.opam  dune-project  dune-workspace  flake.nix
lib/: TAPL.ml  dune  simply_typed_extended.ml  simply_typed_lambda_calculus.ml  untyped_beta_reduction.ml  untyped_beta_reduction.mli  untyped_lambda_calculus.ml  untyped_lambda_calculus.mli  untyped_nameless.ml  untyped_nameless.mli  utils.ml
lib/chomp/: chomp.ml  chomp.mli  chomp_intf.ml  dune  lexer.ml  lexer.mli
lib/f_omega/: dune  f_omega.ml  types.ml
lib/f_omega_sub/: dune  eval.ml  eval.mli  f_omega_sub.ml  parser.ml  typecheck.ml  types.ml  types.mli
lib/f_sub/: dune  eval.ml  f_sub.ml  parser.ml  typecheck.ml  types.ml  types.mli
lib/featherweight_java/: dune  eval.ml  eval.mli  featherweight_java.ml  featherweight_java.mli  parser.ml  parser.mli  typecheck.ml  typecheck.mli  types.ml  types.mli  utils.ml  utils.mli
lib/general_interpreter/: dune  general_interpreter.ml  general_interpreter.mli
lib/hindley_milner/: dune  hindley_milner.ml  hindley_milner.mli  parser.ml  typecheck.ml  typecheck.mli  types.ml  types.mli
lib/parser/: dune  parser.ml  parser.mli
lib/recursive_types/: dune  eval.ml  eval.mli  parser.ml  recursive_types.ml  typecheck.ml  typecheck.mli  types.ml  types.mli
lib/simply_typed_extended/: dune  eval.ml  eval.mli  lexer.ml  lexer.mli  parse.ml  parse.mli  parser.ml  parser.mli  simply_typed_extended.ml  simply_typed_extended.mli  typecheck.ml  types.ml  types.mli
lib/simply_typed_lambda_calculus/: dune  (+3 more)
web/: dune  index.html
(+26 files in other folders)
